--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Time.is Clone (Serverless)</title>
+  <title>synct.me</title>
   <style>
     body {
       margin: 0;
@@ -211,5 +211,7 @@
         document.getElementById('offset-info').textContent = 'Error fetching official time.';
       });
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6516305829824697"
+  crossorigin="anonymous"></script>
 </body>
 </html>
